--- a/Makefile.in
+++ b/Makefile.in
@@ -93,7 +93,8 @@ LIB_DIRS=\
 	xbmc/lib/libid3tag \
 	xbmc/lib/libapetag \
 	xbmc/lib/libPython/linux \
-	lib/libmodplug
+	lib/libmodplug \
+	lib/xbmc-dll-symbols
 
 SS_DIRS=\
 	xbmc/screensavers/rsxs-0.9/xbmc
@@ -263,6 +264,8 @@ xbmc/lib/libapetag/.libs/libapetag.a: force
 	$(MAKE) -C xbmc/lib/libapetag
 lib/libmodplug/src/.libs/libmodplug.a: force
 	$(MAKE) -C lib/libmodplug
+lib/xbmc-dll-symbols/dll-symbols.a: force
+	$(MAKE) -C lib/xbmc-dll-symbols
 
 exports:
 	$(MAKE) xbmc/cores/DllLoader/exports/exports.a
@@ -418,6 +421,8 @@ else
 OBJSXBMC += \
 	xbmc/posix/posix.a
 endif
+
+OBJSXBMC += lib/xbmc-dll-symbols/dll-symbols.a
 
 xbmc.bin: $(OBJSXBMC) $(DYNOBJSXBMC)
 ifeq ($(findstring osx,$(ARCH)), osx)
