--- a/xbmc/utils/Makefile
+++ b/xbmc/utils/Makefile
@@ -73,7 +73,8 @@ SRCS=Addon.cpp \
      Semaphore.cpp \
      FileOperationJob.cpp \
      FileUtils.cpp \
-     Variant.cpp
+     Variant.cpp \
+     PCMLimiter.cpp
 
 LIB=utils.a
 
