--- a/xbmc/utils/Makefile
+++ b/xbmc/utils/Makefile
@@ -8,6 +8,8 @@ SRCS=Addon.cpp \
      Builtins.cpp \
      CharsetConverter.cpp \
      CriticalSection.cpp \
+     DownloadQueue.cpp \
+     DownloadQueueManager.cpp \
      Event.cpp \
      fstrcmp.cpp \
      GUIInfoManager.cpp \
