--- a/configure.in
+++ b/configure.in
@@ -388,19 +388,7 @@ else
   # don't combine with mysqlclient check in apple section above, Linux needs
   # paths from mysql_config
   AC_CHECK_LIB([mysqlclient], [main],, AC_MSG_ERROR($missing_library))
-  AC_CHECK_LIB([faad],      [main],
-               [
-                 if test -f "/usr/lib/libfaad.so.2"; then
-                   FAAD_LIBRARY="libfaad.so.2"
-                   LIBS+=" /usr/lib/libfaad.so.2"
-                 else
-                   LIBS+=" -lfaad"
-                   FAAD_LIBRARY="libfaad.so.0"
-                 fi
-                 AC_DEFINE([HAVE_LIBFAAD], [1], ["Define if you are linking to libfaad"])
-                 AC_DEFINE_UNQUOTED([FAAD_LIBRARY], ["$FAAD_LIBRARY"], [The faad library version to use])
-               ],
-               AC_MSG_ERROR($missing_library))
+  AC_CHECK_LIB([faad],      [main],, AC_MSG_ERROR($missing_library))
   AC_CHECK_HEADER([FLAC/stream_decoder.h],, AC_MSG_ERROR($missing_library))
   AC_CHECK_LIB([smbclient], [main],, AC_MSG_ERROR($missing_library))
   AC_CHECK_LIB([SDL_mixer], [main],, AC_MSG_ERROR($missing_library))
@@ -1266,9 +1254,12 @@ XB_CONFIG_MODULE([xbmc/cores/dvdplayer/Codecs/libdvd/libdvdread], [
     cp `pwd`/../libdvdread/src/*.h `pwd`/../includes/dvdread
   else
     ./configure2 \
-      --extra-cflags="$DVDREAD_CFLAGS -fPIC -DPIC -I`pwd`/../libdvdcss/src" \
+      --extra-cflags="$CFLAGS $DVDREAD_CFLAGS -fPIC -DPIC -I`pwd`/../libdvdcss/src" \
+      --prefix="${prefix}" --includedir="${includedir}" --libdir="${libdir}" --datadir="${datadir}" \
       --enable-static \
       --disable-shared \
+      --disable-strip \
+      --disable-opts \
       --cc="$CC" &&
     make dvdread-config &&
     mkdir -p `pwd`/../includes/dvdread
@@ -1368,10 +1359,12 @@ XB_CONFIG_MODULE([xbmc/lib/libid3tag/libid3tag],[
       --disable-debugging \
       --with-pic
   else
-    CFLAGS=-O3 \
     ./configure \
+      CPPFLAGS="$CPPFLAGS" \
+      CFLAGS="$CFLAGS -fPIC" \ 
+      CXXFLAGS="$CXXFLAGS -fPIC" \
+      --prefix="${prefix}" --includedir="${includedir}" --libdir="${libdir}" --datadir="${datadir}" \
       --disable-static \
-      --disable-debugging \
       --with-pic
   fi
 ], [0])
@@ -1380,17 +1373,26 @@ XB_CONFIG_MODULE([xbmc/visualizations/XBMCProjectM/libprojectM],[
   if test "$host_vendor" = "apple" ; then
     rm -f CMakeCache.txt && CC="" CXX=""  cmake -D CMAKE_C_FLAGS:STRING="-fno-common" -D CMAKE_CXX_FLAGS:STRING="-fno-common" -D CMAKE_BUILD_TYPE:STRING=RelWithDebInfo -D USE_FTGL:BOOL=OFF .
   else
-    rm -f CMakeCache.txt && CC="" CXX=""  cmake -D CMAKE_BUILD_TYPE:STRING=RelWithDebInfo -D USE_FTGL:BOOL=OFF .
+set -x
+    rm -f CMakeCache.txt && cmake -DCMAKE_BUILD_TYPE=None -DUSE_FTGL:BOOL=OFF \
+      -DCMAKE_C_FLAGS="${CFLAGS}" -DCMAKE_CXX_FLAGS="${CXXFLAGS}" \
+      -DCMAKE_INSTALL_PREFIX="${prefix}" -DCMAKE_INSTALL_LIBDIR:PATH="${libdir}" \
+      -DINCLUDE_INSTALL_DIR:PATH="${includedir}" -DLIB_INSTALL_DIR:PATH="${libdir}" \
+      -DSYSCONF_INSTALL_DIR:PATH="${sysconfdir}" -DSHARE_INSTALL_PREFIX:PATH="${datadir}" .
+set +x
   fi
 ], [0])
 
 XB_CONFIG_MODULE([xbmc/visualizations/Goom/goom2k4-0],[
   if test "$host_vendor" != "apple" ; then
     ./configure  \
+        CPPFLAGS="$CPPFLAGS" \
+        CFLAGS="$CFLAGS -fPIC" \ 
+        CXXFLAGS="$CXXFLAGS -fPIC" \
+      --prefix="${prefix}" --includedir="${includedir}" --libdir="${libdir}" --datadir="${datadir}" \
       --disable-shared \
       --enable-static \
       --with-pic
-
   fi
 ], [$BUILD_GOOM])
 
@@ -1414,8 +1416,10 @@ XB_CONFIG_MODULE([xbmc/screensavers/rsxs-0.9/], [
       --disable-skyrocket
   else
     ./configure \
-      CFLAGS="-fPIC" \ 
-      CXXFLAGS="-fPIC" \
+      CPPFLAGS="$CPPFLAGS" \
+      CFLAGS="$CFLAGS -fPIC" \ 
+      CXXFLAGS="$CXXFLAGS -fPIC" \
+      --prefix="${prefix}" --includedir="${includedir}" --libdir="${libdir}" --datadir="${datadir}" \
       --without-xscreensaver \
       --disable-sound \
       --disable-cyclone \
