--- a/project/VS2008Express/guilib.vcproj
+++ b/project/VS2008Express/guilib.vcproj
@@ -430,6 +430,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\guilib\GUILabel.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\guilib\GUILabelControl.cpp"
 				>
 			</File>
@@ -829,6 +833,10 @@
 			</File>
 			<File
 				RelativePath="..\..\guilib\GUIInfoTypes.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\guilib\GUILabel.h"
 				>
 			</File>
 			<File
