--- a/xbmc/lib/libjsonrpc/Makefile
+++ b/xbmc/lib/libjsonrpc/Makefile
@@ -1,4 +1,4 @@
-INCLUDES=-I. -I../ -I../../ -I../../../ -I../../utils -I../../FileSystem -I../../linux -I../../cores -I../../../guilib
+INCLUDES=-I. -I../ -I../../ -I../../../ -I../../utils -I../../FileSystem -I../../linux -I../../cores -I../../../guilib -I../../../lib/jsoncpp/jsoncpp/include
 
 SRCS=JSONRPC.cpp PlayerOperations.cpp SlideshowOperations.cpp PlaylistOperations.cpp FileOperations.cpp MusicLibrary.cpp VideoLibrary.cpp FileItemHandler.cpp SystemOperations.cpp XBMCOperations.cpp TCPServer.cpp
 
