--- a/xbmc/utils/Makefile
+++ b/xbmc/utils/Makefile
@@ -1,4 +1,4 @@
-INCLUDES=-I. -I.. -I../../ -I../linux -I../cores -I../../guilib -I../posix
+INCLUDES=-I. -I.. -I../../ -I../linux -I../cores -I../../guilib -I../posix -I../../lib/jsoncpp/jsoncpp/include
 
 SRCS=AlarmClock.cpp \
      Archive.cpp \
