--- a/xbmc/screensavers/rsxs-0.9/configure.ac
+++ b/xbmc/screensavers/rsxs-0.9/configure.ac
@@ -32,6 +32,12 @@ AC_PROG_RANLIB
 # libltdl, or to use dlpreopen (we don't want libtool at all).
 # Also, we can use gnulib's *_ONCE macros.
 AC_DEFUN([MAC_LIB_LTDL], [
+	# Some of the below macros have dependencies that are m4_require'd.
+	# aclocal doesn't resolve those automatically, so we need to call
+	# LT_PATH_LD and LTSUGAR_VERSION to pull in libtool.m4 and ltsugar.m4
+	# where the required dependencies are m4_defun'd.
+	AC_REQUIRE([LT_PATH_LD])dnl
+	AC_REQUIRE([LTSUGAR_VERSION])dnl
 	AC_REQUIRE([AC_PROG_CC])dnl
 	AC_REQUIRE([AC_HEADER_STDC])dnl
 	AC_REQUIRE([AC_HEADER_DIRENT])dnl
