--- a/configure.in
+++ b/configure.in
@@ -1181,6 +1181,7 @@ XB_CONFIG_MODULE([xbmc/cores/dvdplayer/Codecs/ffmpeg], [
       `if test "$use_debug" = "no"; then echo --disable-debug; fi` \
       --disable-muxers \
       --enable-muxer=spdif \
+      --enable-muxer=adts \
       --disable-encoders \
       --enable-encoder=ac3 \
       --enable-encoder=aac \
@@ -1210,6 +1211,7 @@ XB_CONFIG_MODULE([xbmc/cores/dvdplayer/Codecs/ffmpeg], [
       `if test "$use_debug" = "no"; then echo --disable-debug; fi` \
       --disable-muxers \
       --enable-muxer=spdif \
+      --enable-muxer=adts \
       --disable-encoders \
       --enable-encoder=ac3 \
       --enable-encoder=aac \
